A debian package that works